# gendiff

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
gendiff/: __init__.py  diff.py  file.py  parser.py
gendiff/app/: __init__.py  file.py  parser.py
gendiff/diff/: __init__.py  constants.py  generate.py  stringify.py  tree.py  value.py
gendiff/diff/render/: __init__.py  common.py  get_render.py  nested.py  plain.py  value.py
gendiff/format/: __init__.py  json.py  nested.py  plain.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: gendiff_test.py
tests/fixtures/: config2.json  nested_config1.json  nested_config1.yml  nested_config2.json  nested_config2.yml  plain_config2.json  plain_json  result_nested  result_nested_format_json  result_nested_format_json.json  result_nested_format_nested  result_nested_format_plain
